# cholesky-hpc-optimisation

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  requirements.txt
example/: CMakeLists.txt  main.cpp
include/: mphil_dis_cholesky.h  timing.h
include/cholesky/: v10_parallel_dynamic.hpp  v11_parallel.hpp  v1_baseline.hpp  v2_loop_order.hpp  v3_scalar_hoisting.hpp  v4_pointers.hpp  v5_merge_loop.hpp  v6_cache_blocking.hpp  v7_serial.hpp  v8_parallel_naive.hpp  v9_parallel_static.hpp
output/: v10_parallel_dynamic_matrix_size_runs.csv  v10_parallel_dynamic_threads_runs.csv  v11_parallel_matrix_size_runs.csv  v11_parallel_threads_runs.csv  v1_baseline_matrix_size_runs.csv  v2_loop_order_matrix_size_runs.csv  v3_scalar_hoisting_matrix_size_runs.csv  v4_pointers_matrix_size_runs.csv  v5_merge_loop_matrix_size_runs.csv  v6_cache_blocking_block_size_runs.csv  v6_cache_blocking_matrix_size_runs.csv  v7_serial_block_size_runs.csv  v7_serial_matrix_size_runs.csv  v8_parallel_naive_matrix_size_runs.csv  v8_parallel_naive_threads_runs.csv  v9_parallel_static_matrix_size_runs.csv  v9_parallel_static_threads_runs.csv
scripts/: runtime_block.sh  runtime_matrix.sh  runtime_threads.sh
src/: CMakeLists.txt  mphil_dis_cholesky.cpp
src/blocking/: CMakeLists.txt  v6_cache_blocking.cpp  v7_serial_blocking.cpp
src/matrix/: CMakeLists.txt  v10_parallel_dynamic.cpp  v11_parallel.cpp  v1_baseline.cpp  v2_loop_order.cpp  v3_scalar_hoisting.cpp  v4_pointers.cpp  v5_merge_loop.cpp  v6_cache_blocking.cpp  v7_serial.cpp  v8_parallel_naive.cpp  v9_parallel_static.cpp
src/plotting/: plots.ipynb
src/threads/: CMakeLists.txt  v10_parallel_dynamic_threads.cpp  v11_parallel_threads.cpp  v8_parallel_naive_threads.cpp  v9_parallel_static_threads.cpp
src/timing/: CMakeLists.txt  timing.cpp
test/: CMakeLists.txt  test_correctness.cpp
